tests/baselines/reference/jsxSpreadOverwritesAttributeStrict.errors.txt
file.tsx(21,17): error TS2783: 'a' is specified more than once, so this usage will be overwritten.
file.tsx(22,17): error TS2783: 'a' is specified more than once, so this usage will be overwritten.
file.tsx(22,23): error TS2783: 'b' is specified more than once, so this usage will be overwritten.
file.tsx(23,17): error TS2783: 'a' is specified more than once, so this usage will be overwritten.
file.tsx(23,23): error TS2783: 'd' is specified more than once, so this usage will be overwritten.
file.tsx(24,17): error TS2783: 'a' is specified more than once, so this usage will be overwritten.
file.tsx(24,23): error TS2783: 'd' is specified more than once, so this usage will be overwritten.


==== file.tsx (7 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    
    import React = require('react');
    
    interface Props {
        a: number;
        b: number;
        c?: number;
        d?: number;
    }
    
    
    const props: Props = { a: 1, b: 1 };
    const Foo = (props: Props) => <div>{ props.a }</div>;
    
    // ok
    const a1 = <Foo {...props}></Foo>;
    const a2 = <Foo d={1} {...props}></Foo>;
    
    // error
    const b1 = <Foo a={1} {...props}></Foo>;
                    ~~~~~
!!! error TS2783: 'a' is specified more than once, so this usage will be overwritten.
!!! related TS2785 file.tsx:21:23: This spread always overwrites this property.
    const b2 = <Foo a={1} b={2} {...props}></Foo>;
                    ~~~~~
!!! error TS2783: 'a' is specified more than once, so this usage will be overwritten.
!!! related TS2785 file.tsx:22:29: This spread always overwrites this property.
                          ~~~~~
!!! error TS2783: 'b' is specified more than once, so this usage will be overwritten.
!!! related TS2785 file.tsx:22:29: This spread always overwrites this property.
    const b3 = <Foo a={1} d={1} {...props} {...{ d: 1 }}></Foo>;
                    ~~~~~
!!! error TS2783: 'a' is specified more than once, so this usage will be overwritten.
!!! related TS2785 file.tsx:23:29: This spread always overwrites this property.
                          ~~~~~
!!! error TS2783: 'd' is specified more than once, so this usage will be overwritten.
!!! related TS2785 file.tsx:23:40: This spread always overwrites this property.
    const b4 = <Foo a={1} d={1} {...props} {...{ a: 1, d: 1 }}></Foo>;
                    ~~~~~
!!! error TS2783: 'a' is specified more than once, so this usage will be overwritten.
!!! related TS2785 file.tsx:24:29: This spread always overwrites this property.
                          ~~~~~
!!! error TS2783: 'd' is specified more than once, so this usage will be overwritten.
!!! related TS2785 file.tsx:24:40: This spread always overwrites this property.
    